--- a/gb/20/8/1/n12298901.md
+++ b/gb/20/8/1/n12298901.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ufywns3460/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ufywns3460/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ufywns3460/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ufywns3460/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ufywns3460/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ufywns3460/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ufywns3460/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ufywns3460/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ufywns3460/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ufywns3460/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ufywns3460/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ufywns3460/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ufywns3460/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ufywns3460/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ufywns3460/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ufywns3460/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ufywns3460/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ufywns3460/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ufywns3460/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ufywns3460/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ufywns3460/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ufywns3460/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ufywns3460/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ufywns3460/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ufywns3460/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ufywns3460/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ufywns3460/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ufywns3460/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ufywns3460/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ufywns3460/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ufywns3460/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ufywns3460/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ufywns3460/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ufywns3460/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ufywns3460/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ufywns3460/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ufywns3460/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ufywns3460/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ufywns3460/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ufywns3460/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ufywns3460/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ufywns3460/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ufywns3460/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ufywns3460/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ufywns3460/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ufywns3460/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ufywns3460/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>纽民众为终止中资瓶装水公司扩张 官司打到高等法院</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2020年08月01日讯】（记者宁柏综合报导）据<ahref="https://github.com/ufywns3460/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>电台Radio NZ消息，本周一，由丰盛湾毛利<ahref="https://github.com/ufywns3460/djy/blob/master/gb/tag/%E7%A4%BE%E5%8C%BA.md#1">社区</a>Ngāti Awa发起一场旨在终止一家<ahref="https://github.com/ufywns3460/djy/blob/master/gb/tag/%E4%B8%AD%E8%B5%84%E5%85%AC%E5%8F%B8.md#1">中资公司</a>每年从地处Whakatāne的Awaiti透水层抽取10亿升优质地下水的抗争活动，此案已被<ahref="https://github.com/ufywns3460/djy/blob/master/gb/tag/%E9%AB%98%E7%AD%89%E6%B3%95%E9%99%A2.md#1">高等法院</a>受理。</p>
-<p>Ngāti Awa毛利<ahref="https://github.com/ufywns3460/djy/blob/master/gb/tag/%E7%A4%BE%E5%8C%BA.md#1">社区</a>就丰盛湾地区议会同意授予Creswell NZ Ltd 更新的资源许可，使其得以扩大在ōtakiri的现有<ahref="https://github.com/ufywns3460/djy/blob/master/gb/tag/%E7%93%B6%E8%A3%85%E6%B0%B4.md#1">瓶装水</a>厂生产规模的决定提出上诉。</p>
+<p>【大纪元2020年08月01日讯】（记者宁柏综合报导）据<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>电台Radio NZ消息，本周一，由丰盛湾毛利<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A4%BE%E5%8C%BA.md#1">社区</a>Ngāti Awa发起一场旨在终止一家<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E8%B5%84%E5%85%AC%E5%8F%B8.md#1">中资公司</a>每年从地处Whakatāne的Awaiti透水层抽取10亿升优质地下水的抗争活动，此案已被<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%AB%98%E7%AD%89%E6%B3%95%E9%99%A2.md#1">高等法院</a>受理。</p>
+<p>Ngāti Awa毛利<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A4%BE%E5%8C%BA.md#1">社区</a>就丰盛湾地区议会同意授予Creswell NZ Ltd 更新的资源许可，使其得以扩大在ōtakiri的现有<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%93%B6%E8%A3%85%E6%B0%B4.md#1">瓶装水</a>厂生产规模的决定提出上诉。</p>
 <p>据统计，有近100多位Ngāti Awa的族人聚集在法庭外，敦促政府阻止Creswell NZ Ltd从其透水层抽取更多地下水的计划，这家公司试图通过此举，以逐渐扩大现有业务规模。</p>
-<p>这家被毛利人告上法院的<ahref="https://github.com/ufywns3460/djy/blob/master/gb/tag/%E4%B8%AD%E8%B5%84%E5%85%AC%E5%8F%B8.md#1">中资公司</a>属中国软性饮料巨头农夫山泉的子公司。它不但希望在现有工厂增加每小时的塑料瓶产量，而且试图再建两条灌装水生产线，以达到每小时灌装72000瓶的产能。</p>
+<p>这家被毛利人告上法院的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E8%B5%84%E5%85%AC%E5%8F%B8.md#1">中资公司</a>属中国软性饮料巨头农夫山泉的子公司。它不但希望在现有工厂增加每小时的塑料瓶产量，而且试图再建两条灌装水生产线，以达到每小时灌装72000瓶的产能。</p>
 <p>在这场抗争中Ngāti Awa并非孤军奋战，与其相邻的另两个毛利社区 (Ngāti Te Rangi及Ngāt Pikiao) 的民众周一也加入了Ngāti Awa的行列。</p>
 <p>Ngāti Awa在2019年对丰盛湾地区议会决定起诉案最后被环境法院驳回，未被受理。</p>
-<p>根据不完全统计，在<ahref="https://github.com/ufywns3460/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>各地进行采水并出口的中资<ahref="https://github.com/ufywns3460/djy/blob/master/gb/tag/%E7%93%B6%E8%A3%85%E6%B0%B4.md#1">瓶装水</a>公司有好多家，它们分布在北岛的丰盛湾，怀卡托，霍克斯湾和大惠灵顿地区，以及南岛的坎特伯雷地区和西海岸。所有瓶装水全部销往中国市场。较为出名的公司包括：</p>
+<p>根据不完全统计，在<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>各地进行采水并出口的中资<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%93%B6%E8%A3%85%E6%B0%B4.md#1">瓶装水</a>公司有好多家，它们分布在北岛的丰盛湾，怀卡托，霍克斯湾和大惠灵顿地区，以及南岛的坎特伯雷地区和西海岸。所有瓶装水全部销往中国市场。较为出名的公司包括：</p>
 <ul>
 <li>2015年10月成立、位于霍克斯湾Hastings的New Zealand Miracle Water Ltd</li>
 <li>2016年10月成立、位于丰盛湾Whakatāne的Creswell NZ Ltd</li>
@@ -40,42 +40,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ufywns3460/djy/blob/master/gb/20/3/7/n11922895.md#1">中共病毒：维州增627例 8死 染疫医护激增 居家令或延长</a></li>
-<li><a href="https://github.com/ufywns3460/djy/blob/master/gb/20/7/28/n12290364.md#1">【独家】揭秘替中共牵线搭桥的神秘商会</a></li>
-<li><a href="https://github.com/ufywns3460/djy/blob/master/gb/20/7/31/n12296441.md#1">【拍案惊奇】李登辉谈习近平 休斯顿领馆被破坏</a></li>
-<li><a href="https://github.com/ufywns3460/djy/blob/master/gb/20/7/31/n12296794.md#1">尽管封关 澳仍将允许200外劳入境采摘水果</a></li>
-<li><a href="https://github.com/ufywns3460/djy/blob/master/gb/20/7/31/n12296837.md#1">政府将投资5亿元升级老旧公房至干燥温暖</a></li>
-<li><a href="https://github.com/ufywns3460/djy/blob/master/gb/20/7/31/n12297218.md#1">面临断供危机 大陆科企经香港大举采购芯片</a></li>
-<li><a href="https://github.com/ufywns3460/djy/blob/master/gb/20/7/31/n12297324.md#1">张慧东：美澳同盟会晤 自由世界共抗中共暴政</a></li>
-<li><a href="https://github.com/ufywns3460/djy/blob/master/gb/20/7/31/n12297426.md#1">第 6 起隔离点逃脱事件发生在奥克兰市中心</a></li>
-<li><a href="https://github.com/ufywns3460/djy/blob/master/gb/20/7/31/n12297455.md#1">首选总理支持率上升，但国家党仍陷困境</a></li>
-<li><a href="https://github.com/ufywns3460/djy/blob/master/gb/20/8/1/n12298937.md#1">纽零售业巨头The Warehouse 大裁员</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/7/n11922895.md#1">维州新增9149例病毒感染 新州新增20389例</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/7/28/n12290364.md#1">【独家】揭秘替中共牵线搭桥的神秘商会</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/7/31/n12296441.md#1">【拍案惊奇】李登辉谈习近平 休斯顿领馆被破坏</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/7/31/n12296794.md#1">尽管封关 澳仍将允许200外劳入境采摘水果</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/7/31/n12296837.md#1">政府将投资5亿元升级老旧公房至干燥温暖</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/7/31/n12297218.md#1">面临断供危机 大陆科企经香港大举采购芯片</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/7/31/n12297324.md#1">张慧东：美澳同盟会晤 自由世界共抗中共暴政</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/7/31/n12297426.md#1">第 6 起隔离点逃脱事件发生在奥克兰市中心</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/7/31/n12297455.md#1">首选总理支持率上升，但国家党仍陷困境</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/15/n13647636.md#1">机构暂停解雇未接种员工 包括奥克兰市议会</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/23/n10735061.md#1" target="_blank">古玉文：窃国初期中共几十万干部争当陈世美</a></li><li><a href="https://github.com/ufywns3460/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/20/n11466682.md#1" target="_blank">患脑瘤等死 中共总参工程师炼法轮功后痊愈</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/20/n10498992.md#1" target="_blank">裴毅然：再说“四?一二”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/16/n3684317.md#1" target="_blank">我的人生，注定是一场修炼</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ufywns3460/djy/blob/master/gb/20/7/30/n12293985.md#1">美国关中领馆效应 亲共者大难临头各自飞</a></li>
-<li><a href="https://github.com/ufywns3460/djy/blob/master/gb/20/7/30/n12295214.md#1">李登辉生前称共产主义骗人 曾评价习近平</a></li>
-<li><a href="https://github.com/ufywns3460/djy/blob/master/gb/20/7/30/n12293750.md#1">【翻墙必看】蝗灾已在大陆泛滥 麻烦大了</a></li>
-<li><a href="https://github.com/ufywns3460/djy/blob/master/gb/20/7/30/n12295855.md#1">【新闻看点】连遭国际11击 习近平愁容露面</a></li>
-<li><a href="https://github.com/ufywns3460/djy/blob/master/gb/20/7/29/n12290905.md#1">前中共军官：南海若开战中共则亡</a></li>
-<li><a href="https://github.com/ufywns3460/djy/blob/master/gb/20/7/29/n12293399.md#1">与李晨分手一年 范冰冰首谈失恋心情</a></li>
-<li><a href="https://github.com/ufywns3460/djy/blob/master/gb/20/7/30/n12294569.md#1">宫胁咲良怕生 谈到Irene倒抽气 想与TWICE攀谈</a></li>
-<li><a href="https://github.com/ufywns3460/djy/blob/master/gb/20/7/30/n12296166.md#1">杜汶泽悼念李登辉：台湾之父一路好走</a></li>
-<li><a href="https://github.com/ufywns3460/djy/blob/master/gb/20/7/29/n12291118.md#1">身高18公尺 日本钢弹机器人跨出第一步</a></li>
-<li><a href="https://github.com/ufywns3460/djy/blob/master/gb/20/7/30/n12295937.md#1">被指散布疫苗假讯息 麦当娜IG帖文遭删除</a></li>
-<li><a href="https://github.com/ufywns3460/djy/blob/master/gb/20/7/29/n12291800.md#1">在1905年的照片中看到自己 英男相信有前世</a></li>
-<li><a href="https://github.com/ufywns3460/djy/blob/master/gb/20/7/25/n12283672.md#1">【佳人传】黄氏姐妹的不同人生</a></li>
-<li><a href="https://github.com/ufywns3460/djy/blob/master/gb/20/7/29/n12291215.md#1">【馨香雅句】神奇的中国古代数学</a></li>
-<li><a href="https://github.com/ufywns3460/djy/blob/master/gb/9/4/4/n2484963.md#1">从《清明上河图》看时代风华（下）</a></li>
-<li><a href="https://github.com/ufywns3460/djy/blob/master/gb/20/7/25/n12283826.md#1">散文：忆香港</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12141250.md#1">蓬佩奥：香港无自治 不再保证获美特殊待遇</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12140250.md#1">台加紧研发多种导弹 应对中共可能的攻台行动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/28/n12144173.md#1">李克强称6亿人月收入千元 震惊不少网友</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12141717.md#1">美宣布香港无自治 川普将采取哪些行动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12140587.md#1">中共早就知晓疫情？美国夫妇忆武汉惊魂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12138527.md#1">崔永元晒视频杠上胡锡进：千颗核弹头放你家</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12139391.md#1">黄秋生居家检疫出关 夸台湾防疫、想吃卤肉饭</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12137500.md#1">影帝吴朋奉骤逝 法医鉴定死因为脑中风</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12139000.md#1">欧阳娜娜演技遭负评 何炅打抱不平后又道歉</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12138702.md#1">疫情下贝克汉姆近照曝光 头发稀疏秃顶明显</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/18/n12042366.md#1">灾难前神明托梦示警 信者免遭劫难</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/4/7/n3559927.md#1">围棋别称中的故事</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/25/n12134403.md#1">“一鼓作气” 一场战争醒悟一生</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/10/n12019598.md#1">古典音乐之光——洪大的基奠，完美的结合</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/22/n12128808.md#1">世界唯一无坝引水都江堰  中华科学文明活见证</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ufywns3460/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ufywns3460/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/1/n12298901.htm">纽民众为终止中资瓶装水公司扩张 官司打到高等法院</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/1/n12298901.htm">纽民众为终止中资瓶装水公司扩张 官司打到高等法院</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ufywns3460/djy/blob/master/gb/20/8/1/n12298901.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ufywns3460/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufywns3460/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ufywns3460/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ufywns3460/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ufywns3460/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufywns3460/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ufywns3460/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufywns3460/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ufywns3460/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufywns3460/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ufywns3460/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufywns3460/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ufywns3460/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufywns3460/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ufywns3460/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufywns3460/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ufywns3460/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufywns3460/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ufywns3460/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufywns3460/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ufywns3460/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufywns3460/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ufywns3460/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufywns3460/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ufywns3460/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufywns3460/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ufywns3460/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufywns3460/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ufywns3460/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufywns3460/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ufywns3460/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufywns3460/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ufywns3460/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufywns3460/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ufywns3460/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufywns3460/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ufywns3460/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufywns3460/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ufywns3460/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufywns3460/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ufywns3460/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufywns3460/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ufywns3460/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufywns3460/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ufywns3460/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufywns3460/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ufywns3460/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufywns3460/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/8/1/n12298901.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
